--- a/test2.ipynb
+++ b/test2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +31,24 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 6 -6  2]\n",
+      "36\n"
+     ]
+    }
+   ],
    "source": [
-    "x = np.arange(0, 10, 0.1)\n",
-    "y = np.sin(x)"
+    "x = np.array([1, 2, 3])\n",
+    "y = np.array([1, 4, 9])\n",
+    "result1 = np.cross(x,y)\n",
+    "result2 = np.dot(x,y)\n",
+    "print(result1)\n",
+    "print(result2)\n",
+    "\n"
    ]
   }
  ],
