No major changes

--- a/test3_23OCT2024.ipynb
+++ b/test3_23OCT2024.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
    "source": [
     "x = [5,7,8,7,2,17,2,9,4,11,12,9,6]\n",
     "y = [99,86,87,88,111,86,103,87,94,78,77,85,86]\n",
-    "assert len(x) == len(y) #make sure the length of x and y are the same\n",
+    "assert len(x) == len(y), \"number of x and y values should be equal\" #make sure the length of x and y are the same\n",
     "\n",
     "#take a look at the data\n",
     "plt.xlabel('X Axis Label')\n",
@@ -57,7 +57,7 @@
     "print(\"The average of x is \", x_avg)\n",
     "print(\"The average of y is \", y_avg)\n",
     "\n",
-    "def slope \n",
+    "def slope(x,y):\n",
     "\n"
    ]
   }
